--- a/src/app/my-profile/my-profile.component.scss
+++ b/src/app/my-profile/my-profile.component.scss
@@ -1,184 +1,191 @@
-.profile-group {
-  .card {
-    border-radius: 0;
-    border-color: #1b1e24;
-    background-color: transparent;
-    max-width: 315px;
-    @media (max-width: 825px) {
-      max-width: 212px;
-    }
-    padding-top: 30px;
-    img {
-      width: 1.75rem;
-      height: 1.75rem;
-    }
-  }
-  .card:hover {
-    cursor: pointer;
-  }
-  .card-body {
-    padding: 0;
-    @media (max-width: 825px) {
-      max-width: 212px;
-    }
-    @media (max-width: 475px) {
-      .text-muted {
-        font-size: 12px;
-      }
-    }
-  }
-  .card-category {
-    white-space: nowrap;
-    font-size: 18px;
-    margin-bottom: 0 !important;
-    @media (max-width: 375px) {
-      font-size: 14px;
-    }
-  }
-}
+@import '../app.component.scss';
 
-//card text styling
-.card-text {
-  margin: 20px auto 25px auto;
-  line-height: normal;
-  @media (max-width: 475px) {
-    margin: 20px 20px 20px auto;
-  }
-}
-.top-card-border {
-  border-top: none;
-  padding-top: 0 !important;
-}
-.bottom-card-border {
-  border-bottom: none;
-  padding-bottom: 0;
-}
-.left-card-border {
-  border-left: none;
-
-  .card-text {
-    padding-right: 5px;
-  }
-}
-.right-card-border {
-  border-right: none;
-  @media (max-width: 575px) {
-    padding-left: 15px;
-  }
-  @media (max-width: 450px) {
-    padding-left: 12px;
-    padding-right: 12px !important;
-  }
-  @media (max-width: 450px) {
-    .card-text,
-    .text-muted {
-      margin-right: 0;
-    }
-  }
-}
-.pg-row {
-  margin-top: 35px;
-  @media (max-width: 576px) {
-    margin-top: 50px;
-  }
-}
-.username {
-  font-size: 18px;
-  @media (max-width: 576px) {
-    margin-left: 27px;
-  }
-
-  // Small devices (landscape phones, 576px and up)
-  @media (min-width: 576px) {
-    margin-left: 27px;
-  }
-
-  // Medium devices (tablets, 768px and up)
-  @media (max-width: 825px) {
-    margin-left: 0px;
-  }
-}
 .my-profile-wrapper {
-  display: flex;
-  flex-wrap: nowrap;
-  margin: -10px 0 140.5px 0;
-  .user-container {
-    width: 150px;
-    margin-right: 8%;
-    @media (max-width: 825px) {
-      margin-top: -7px;
-      margin-bottom: 45px;
-    }
-  }
-  .category--wrapper {
-    width: 70%;
-    @media (max-width: 825px) {
-      width: 100% !important;
-      margin-left: -12px !important;
-    }
-  }
-  @media (max-width: 825px) {
-    // margin-top: 155px;
-    flex-direction: column;
-  }
-}
-.user-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  @media (max-width: 825px) {
-    flex-direction: row;
-    margin-left: -10px;
-    align-items: center;
-  }
-  .username-label {
-    text-align: center;
-    margin-top: 28px;
-    @media (max-width: 825px) {
-      margin-top: 0;
-      margin-left: 12px;
-    }
-  }
-  .user-img {
-    width: 149px;
-    height: 149px;
-    display: block;
-    border: 1px solid #ffd83b;
-    border-radius: 50%;
-    margin-right: 79px;
-    @media (max-width: 1200px) {
-      margin-right: 2vw;
-    }
-    @media (max-width: 900px) {
-      width: 125px;
-      height: 125px;
-    }
-  }
-}
+	//   display: flex;
+	//   flex-wrap: nowrap;
+	.user-container {
+		// width: 150px;
+		margin-right: 8%;
+		// @media (max-width: 825px) {
+		//   margin-top: -7px;
+		//   margin-bottom: 45px;
+		// }
 
-.intro {
-  font-size: 20px;
-  font-weight: bold;
-  margin-bottom: 12px;
-  // Extra Small devices (landscape phones, 576px and up)
-  @media (max-width: 576px) {
-    margin-top: 0;
-  }
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		@media (max-width: 768px) {
+			flex-direction: row;
+			// margin-left: -10px;
+			align-items: center;
+		}
 
-  // Small devices (landscape phones, 576px and up)
-  @media (min-width: 576px) {
-    // margin-top: 50px;
-  }
+		.user-img {
+			width: 116px;
+			height: 116px;
+			display: block;
+			border: 1px solid #ffd83b;
+			border-radius: 50%;
+			margin-right: rem(27);
+			// @media (max-width: 1200px) {
+			// 	margin-right: 2vw;
+			// }
+			// @media (max-width: 900px) {
+			// 	width: 125px;
+			// 	height: 125px;
+			// }
+		}
+		.username-label {
+			text-align: center;
+			// margin-top: 28px;
+			@media (max-width: 825px) {
+				margin-top: 0;
+				// margin-left: 12px;
+			}
+		}
+	}
 
-  // Medium devices (tablets, 768px and up)
-  @media (min-width: 768px) {
-    margin-top: 0;
-  }
-}
-.sub {
-  font-size: 18px;
-  @media (max-width: 450px) {
-    font-size: 14px;
-    margin-top: 12px;
-  }
+	.category--wrapper {
+		margin-top: em(50);
+		// width: 70%;
+		// @media (max-width: 825px) {
+		// 	width: 100% !important;
+		// 	// margin-left: -12px !important;
+		// }
+
+		.intro {
+			font-size: 20px;
+			font-weight: bold;
+			margin-bottom: 12px;
+			// Extra Small devices (landscape phones, 576px and up)
+			@media (max-width: 576px) {
+				margin-top: 0;
+			}
+
+			// Small devices (landscape phones, 576px and up)
+			@media (min-width: 576px) {
+				// margin-top: 50px;
+			}
+
+			// Medium devices (tablets, 768px and up)
+			@media (min-width: 768px) {
+				margin-top: 0;
+			}
+		}
+		.sub {
+			font-size: 18px;
+			@media (max-width: 450px) {
+				font-size: 14px;
+				margin-top: 12px;
+			}
+		}
+
+		.profile-settings {
+			margin-top: em(33);
+			// @media (max-width: 576px) {
+			// 	margin-top: 50px;
+			// }
+		}
+	}
+
+	.profile-group {
+		.card {
+			border-radius: 0;
+			// border-color: #1b1e24;
+			background-color: transparent;
+			// max-width: 315px;
+			// @media (max-width: 825px) {
+			// 	max-width: 212px;
+			// }
+			// padding-top: 30px;
+			img {
+				width: 1.75rem;
+				height: 1.75rem;
+			}
+		}
+		.card:hover {
+			cursor: pointer;
+		}
+		.card-body {
+			padding: 0;
+			@media (max-width: 825px) {
+				max-width: 212px;
+			}
+			@media (max-width: 475px) {
+				.text-muted {
+					font-size: 12px;
+				}
+			}
+		}
+		.card-category {
+			white-space: nowrap;
+			font-size: 18px;
+			margin-bottom: 0 !important;
+			@media (max-width: 375px) {
+				font-size: 14px;
+			}
+		}
+	}
+
+	//card text styling
+	.card-text {
+		margin: 20px auto 25px auto;
+		line-height: normal;
+		@media (max-width: 475px) {
+			margin: 20px 20px 20px auto;
+		}
+	}
+	.top-card-border {
+		border-top: none;
+		padding-top: 0 !important;
+	}
+	.bottom-card-border {
+		border-bottom: none;
+		padding-bottom: 0;
+	}
+	.left-card-border {
+		border-left: none;
+
+		.card-text {
+			padding-right: 5px;
+		}
+	}
+	.right-card-border {
+		border-right: none;
+		@media (max-width: 575px) {
+			padding-left: 15px;
+		}
+		@media (max-width: 450px) {
+			padding-left: 12px;
+			padding-right: 12px !important;
+		}
+		@media (max-width: 450px) {
+			.card-text,
+			.text-muted {
+				margin-right: 0;
+			}
+		}
+	}
+
+	.username {
+		font-size: 18px;
+		@media (max-width: 576px) {
+			margin-left: 27px;
+		}
+
+		// Small devices (landscape phones, 576px and up)
+		@media (min-width: 576px) {
+			margin-left: 27px;
+		}
+
+		// Medium devices (tablets, 768px and up)
+		@media (max-width: 825px) {
+			margin-left: 0px;
+		}
+	}
+
+	// @media (max-width: 825px) {
+	// 	// margin-top: 155px;
+	// 	flex-direction: column;
+	// }
 }
