--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,25 +41,26 @@ strong {
 
 .section-heading {
 	margin-bottom: em(12);
-	.section-title {
-		font-weight: 800;
-		color: #fff;
-		font-size: rem(36);
-		white-space: nowrap;
-		@media (max-width: 576px) {
-			font-size: 28px;
-			margin-bottom: 0;
-		}
+}
 
-		@media (max-width: 576px) {
-			font-size: rem(24);
-		}
+.section-title {
+	font-weight: 800;
+	color: #fff;
+	font-size: rem(36);
+	white-space: nowrap;
+	@media (max-width: 576px) {
+		font-size: 28px;
+		margin-bottom: 0;
+	}
+
+	@media (max-width: 576px) {
+		font-size: rem(24);
 	}
 }
 
 /* Swiper global styles */
 .swiper-container {
-	height: 375px;
+	margin-bottom: em(19.2);
 
 	// @media (max-width: 500px) {
 	// 	width: 98%;
@@ -83,6 +84,7 @@ strong {
 		transition: all 0.3s ease-in-out;
 	}
 	.swiper-slide {
+		transition: none !important;
 		cursor: pointer;
 		// width: calc(5vw + 20%) !important;
 		// max-width: 225px;
@@ -109,7 +111,7 @@ strong {
 		-webkit-box-align: end;
 		-ms-flex-align: end;
 		align-items: flex-end;
-		margin-bottom: em(19);
+		// margin-bottom: em(19);
 		// Extra Small devices (landscape phones, 576px and up)
 		@media (max-width: 576px) {
 			// min-height: 221px;
@@ -142,6 +144,7 @@ strong {
 
 		.artist-img {
 			border-radius: 10px;
+			width: 100%;
 			// position: absolute;
 			// display: block;
 			// width: 0px;
@@ -150,10 +153,6 @@ strong {
 			// max-width: 100px;
 			// min-height: 100%;
 			// max-height: 100%;
-		}
-
-		.card-details {
-			padding: 0px 1em 0px 0px;
 		}
 
 		.event {
@@ -166,6 +165,7 @@ strong {
 			width: inherit;
 		}
 		.artist {
+			font-weight: 600;
 			overflow: hidden;
 			text-overflow: ellipsis;
 			white-space: nowrap;
