refactor: clean up and add responsive slider to my-shows

--- a/src/app/my-shows/my-shows.component.html
+++ b/src/app/my-shows/my-shows.component.html
@@ -1,5 +1,5 @@
 <div class="my-shows max-width-wrapper mx-auto">
-	<div class="row section-heading">
+	<div class="section-heading">
 		<h4 class="section-title">My Shows</h4>
 		<!-- <div class=" col-6 row align-items-center shows-row"> -->
 		<!-- *****************************************************  ***** -->
