--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav [route]="path"></app-nav>
 <div class="container-fluid mx-auto w-100 padding-wrapper">
-  <router-outlet></router-outlet>
+	<router-outlet (activate)='onActivate($event)'></router-outlet>
 </div>
 <app-footer></app-footer>
