--- a/src/app/my-profile/my-profile.component.scss
+++ b/src/app/my-profile/my-profile.component.scss
@@ -1,23 +1,29 @@
 @import '../app.component.scss';
 
 .my-profile-wrapper {
-	//   display: flex;
-	//   flex-wrap: nowrap;
+	display: flex;
+	flex-direction: column;
+
+	@media (min-width: 768px) {
+		flex-direction: row;
+	}
+
 	.user-container {
 		// width: 150px;
-		margin-right: 8%;
+		margin-right: 2em;
 		// @media (max-width: 825px) {
-		//   margin-top: -7px;
-		//   margin-bottom: 45px;
+		// 	margin-top: -7px;
+		// 	margin-bottom: 45px;
 		// }
 
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-start;
-		@media (max-width: 768px) {
+		align-items: center;
+		gap: 1em;
+		@media (max-width: 767px) {
 			flex-direction: row;
 			// margin-left: -10px;
-			align-items: center;
 		}
 
 		.user-img {
@@ -26,27 +32,29 @@
 			display: block;
 			border: 1px solid #ffd83b;
 			border-radius: 50%;
-			margin-right: rem(27);
 			// @media (max-width: 1200px) {
 			// 	margin-right: 2vw;
 			// }
-			// @media (max-width: 900px) {
-			// 	width: 125px;
-			// 	height: 125px;
-			// }
+			@media (min-width: 768px) {
+				width: 100%;
+				max-width: 141px;
+				height: auto;
+			}
 		}
 		.username-label {
 			text-align: center;
 			// margin-top: 28px;
-			@media (max-width: 825px) {
-				margin-top: 0;
-				// margin-left: 12px;
-			}
+			// @media (max-width: 825px) {
+			// 	margin-top: 0;
+			// 	// margin-left: 12px;
+			// }
 		}
 	}
 
-	.category--wrapper {
-		margin-top: em(50);
+	.settings-wrapper {
+		@media (max-width: 768px) {
+			margin-top: em(50);
+		}
 		// width: 70%;
 		// @media (max-width: 825px) {
 		// 	width: 100% !important;
@@ -54,135 +62,117 @@
 		// }
 
 		.intro {
-			font-size: 20px;
+			font-size: em(20);
 			font-weight: bold;
-			margin-bottom: 12px;
-			// Extra Small devices (landscape phones, 576px and up)
-			@media (max-width: 576px) {
-				margin-top: 0;
-			}
-
-			// Small devices (landscape phones, 576px and up)
-			@media (min-width: 576px) {
-				// margin-top: 50px;
-			}
-
-			// Medium devices (tablets, 768px and up)
-			@media (min-width: 768px) {
-				margin-top: 0;
-			}
+			margin-bottom: em(12);
 		}
 		.sub {
-			font-size: 18px;
-			@media (max-width: 450px) {
-				font-size: 14px;
-				margin-top: 12px;
+			font-size: em(18);
+			@media (max-width: 576px) {
+				font-size: em(15);
+				margin-top: em(12);
 			}
-		}
-
-		.profile-settings {
-			margin-top: em(33);
-			// @media (max-width: 576px) {
-			// 	margin-top: 50px;
-			// }
 		}
 	}
 
-	.profile-group {
+	.profile-settings {
+		margin-top: em(33);
+		margin-bottom: em(141);
+		width: 450px;
+
 		.card {
-			border-radius: 0;
-			// border-color: #1b1e24;
 			background-color: transparent;
-			// max-width: 315px;
-			// @media (max-width: 825px) {
-			// 	max-width: 212px;
-			// }
-			// padding-top: 30px;
+			border: none;
+			padding: em(26) 0;
+
+			&:hover,
+			&:focus {
+				cursor: pointer;
+			}
 			img {
 				width: 1.75rem;
 				height: 1.75rem;
 			}
-		}
-		.card:hover {
-			cursor: pointer;
-		}
-		.card-body {
-			padding: 0;
-			@media (max-width: 825px) {
-				max-width: 212px;
-			}
-			@media (max-width: 475px) {
-				.text-muted {
-					font-size: 12px;
+
+			.card-body {
+				padding: 0;
+				margin-top: em(24);
+				max-width: 18ch;
+
+				// @media (max-width: 825px) {
+				// 	max-width: 212px;
+				// }
+				@media (max-width: 576px) {
+					.text-muted {
+						font-size: em(14);
+					}
 				}
-			}
-		}
-		.card-category {
-			white-space: nowrap;
-			font-size: 18px;
-			margin-bottom: 0 !important;
-			@media (max-width: 375px) {
-				font-size: 14px;
+				.card-title {
+					white-space: nowrap;
+					font-size: em(18);
+					margin-bottom: 0 !important;
+					@media (max-width: 576px) {
+						font-size: em(16);
+					}
+				}
+				.card-text {
+					margin-top: em(21);
+					line-height: normal;
+				}
 			}
 		}
 	}
 
 	//card text styling
-	.card-text {
-		margin: 20px auto 25px auto;
-		line-height: normal;
-		@media (max-width: 475px) {
-			margin: 20px 20px 20px auto;
-		}
-	}
-	.top-card-border {
-		border-top: none;
-		padding-top: 0 !important;
-	}
-	.bottom-card-border {
-		border-bottom: none;
-		padding-bottom: 0;
-	}
-	.left-card-border {
-		border-left: none;
 
-		.card-text {
-			padding-right: 5px;
-		}
-	}
-	.right-card-border {
-		border-right: none;
-		@media (max-width: 575px) {
-			padding-left: 15px;
-		}
-		@media (max-width: 450px) {
-			padding-left: 12px;
-			padding-right: 12px !important;
-		}
-		@media (max-width: 450px) {
-			.card-text,
-			.text-muted {
-				margin-right: 0;
-			}
-		}
-	}
+	// .top-card-border {
+	// 	border-top: none;
+	// 	padding-top: 0 !important;
+	// }
+	// .bottom-card-border {
+	// 	border-bottom: none;
+	// 	padding-bottom: 0;
+	// }
+	// .left-card-border {
+	// 	border-left: none;
 
-	.username {
-		font-size: 18px;
-		@media (max-width: 576px) {
-			margin-left: 27px;
-		}
+	// 	.card-text {
+	// 		padding-right: 5px;
+	// 	}
+	// }
+	// .right-card-border {
+	// 	border-right: none;
+	// 	@media (max-width: 575px) {
+	// 		padding-left: 15px;
+	// 	}
+	// 	@media (max-width: 450px) {
+	// 		padding-left: 12px;
+	// 		padding-right: 12px !important;
+	// 	}
+	// 	@media (max-width: 450px) {
+	// 		.card-text,
+	// 		.text-muted {
+	// 			margin-right: 0;
+	// 		}
+	// 	}
+	// }
 
-		// Small devices (landscape phones, 576px and up)
-		@media (min-width: 576px) {
-			margin-left: 27px;
-		}
+	// .username {
+	// 	font-size: 18px;
+	// 	@media (max-width: 576px) {
+	// 		margin-left: 27px;
+	// 	}
 
-		// Medium devices (tablets, 768px and up)
-		@media (max-width: 825px) {
-			margin-left: 0px;
-		}
-	}
+	// 	// Small devices (landscape phones, 576px and up)
+	// 	@media (min-width: 576px) {
+	// 		margin-left: 27px;
+	// 	}
+
+	// 	// Medium devices (tablets, 768px and up)
+	// 	@media (max-width: 825px) {
+	// 		margin-left: 0px;
+	// 	}
+	// }
 
 	// @media (max-width: 825px) {
 	// 	// margin-top: 155px;
