--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -5,11 +5,10 @@
 }
 
 .profile {
-	min-height: 100vh;
 	padding-top: em(41);
 
 	.heading {
-		margin-bottom: em(30);
+		margin-bottom: rem(30);
 	}
 
 	.avatar {
@@ -42,17 +41,17 @@
 			transition: 0.3s;
 		}
 	}
-	@media (max-width: 825px) {
-		ul {
-			display: none;
-		}
-		// min-height: auto;
-	}
+	// @media (max-width: 825px) {
+	// 	ul {
+	// 		display: none;
+	// 	}
+	// 	// min-height: auto;
+	// }
 }
 
-.flex-direction-wrapper {
-	flex-direction: column;
-	@media (min-width: 825px) {
-		flex-direction: row;
-	}
-}
+// .flex-direction-wrapper {
+// 	flex-direction: column;
+// 	@media (min-width: 825px) {
+// 		flex-direction: row;
+// 	}
+// }
