--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,12 +49,12 @@ strong {
 	color: #fff;
 	font-size: rem(36);
 	white-space: nowrap;
-	@media (max-width: 576px) {
-		font-size: 28px;
-		margin-bottom: 0;
-	}
+	// @media (max-width: 576px) {
+	// 	font-size: 28px;
+	// 	margin-bottom: 0;
+	// }
 
-	@media (max-width: 576px) {
+	@media (max-width: 768px) {
 		font-size: rem(24);
 	}
 }
@@ -70,11 +70,6 @@ strong {
 
 		.different-photo {
 			background-size: cover;
-		}
-
-		.nav-blur {
-			backdrop-filter: blur(25px);
-			-webkit-backdrop-filter: blur(25px);
 		}
 	}
 	.hover-wrapper {
