fix: dropdown menu and images glich

--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -14,7 +14,7 @@
 			<div class="row mx-auto w-100">
 				<!-- first card -->
 				<div class="card col-6 px-0" routerLink="/account/profile/personal-details">
-					<img src="../../images/icons/profile-user.svg" width="auto" height="27px" alt="Details">
+					<img src="../../images/icons/profile-user.svg" width="24px" height="24px" alt="Details">
 					<div class="card-body">
 						<h5 class="card-title">Personal Details</h5>
 						<p class="card-text"><small class="text-muted">Provide all the personal Information and how
@@ -24,7 +24,7 @@
 				</div>
 				<!-- second card -->
 				<div class="card col-6 pe-0" routerLink="/account/profile/login-security">
-					<img src="../images/icons/profile-log-in-outline.svg" alt="security" width="auto" height="27px">
+					<img src="../images/icons/profile-log-in-outline.svg" alt="security" width="27px" height="25px">
 					<div class="card-body">
 						<h5 class="card-title">Login & Security</h5>
 						<p class="card-text"><small class="text-muted">Change your password and make sure your
@@ -39,7 +39,7 @@
 			<div class="row mx-auto w-100">
 				<!-- 1st card  -->
 				<div class="card col-6 px-0" routerLink="/account/profile/invoices">
-					<img src="../images/icons/profile-invoice.svg" alt="invoice" width="auto" height="27px">
+					<img src="../images/icons/profile-invoice.svg" alt="invoice" width="41px" height="47px">
 					<div class="card-body">
 						<p class="card-title">Invoices</p>
 						<p class="card-text"><small class="text-muted">View / Download your previous
@@ -49,8 +49,8 @@
 				</div>
 				<!-- second card -->
 				<div class="card col-6 px-0" routerLink="/account/profile/newsletter">
-					<img src="../../images/icons/profile-newsletter.svg" alt="newsletter icon" width="auto"
-						height="27px">
+					<img src="../../images/icons/profile-newsletter.svg" alt="newsletter icon" width="22px"
+						height="22px">
 					<div class="card-body">
 						<p class="card-title card-category">Newsletter</p>
 						<p class="card-text"><small class="text-muted">Set up your newsletter to receive information
