--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -293,15 +293,17 @@ nav {
 		padding: 0;
 		margin: 0;
 		&::before {
-			content: url(../../../images/icons/nav-hover-dash.svg);
+			content: '';
 			opacity: 0;
-			margin-right: -5px;
+			// display: none;
+			// margin-right: -5px;
 			position: relative;
 			top: -5px;
 			transition: all 0.3s ease-in-out;
 		}
 		&:hover {
 			&::before {
+				content: url(../../../images/icons/nav-hover-dash.svg);
 				opacity: 1;
 				margin-right: 5px;
 			}
